--- a/CodeAnalysis/App.config
+++ b/CodeAnalysis/App.config
@@ -1,6 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="CodeAnalysis.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <CodeAnalysis.Properties.Settings>
+            <setting name="RepositoryURL" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="TrunkName" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="BrancheName" serializeAs="String">
+                <value />
+            </setting>
+        </CodeAnalysis.Properties.Settings>
+    </userSettings>
 </configuration>
