Add a way to manage git repositories

--- a/CodeAnalysis/App.config
+++ b/CodeAnalysis/App.config
@@ -10,7 +10,7 @@
     </startup>
     <userSettings>
         <CodeAnalysis.Properties.Settings>
-            <setting name="RepositoryURL" serializeAs="String">
+            <setting name="RepositoryUrl" serializeAs="String">
                 <value />
             </setting>
             <setting name="TrunkName" serializeAs="String">
