--- a/CodeAnalysis/Properties/Settings.settings
+++ b/CodeAnalysis/Properties/Settings.settings
@@ -2,7 +2,7 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="CodeAnalysis.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="RepositoryURL" Type="System.String" Scope="User">
+    <Setting Name="RepositoryUrl" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="TrunkName" Type="System.String" Scope="User">
