--- a/CodeAnalysis/CodeAnalysis.csproj
+++ b/CodeAnalysis/CodeAnalysis.csproj
@@ -85,7 +85,7 @@
     <Compile Include="BusinessLogic\CodeCoverageGenerator.cs" />
     <Compile Include="BusinessLogic\CodeMetricsGeneratorFromExcel.cs" />
     <Compile Include="BusinessLogic\CodeMetricsGeneratorFromXml.cs" />
-    <Compile Include="BusinessLogic\ForegroundColorConverter.cs" />
+    <Compile Include="Converters\ForegroundColorConverter.cs" />
     <Compile Include="BusinessLogic\UserSettings.cs" />
     <Compile Include="Core\TreeListView.cs" />
     <Compile Include="Models\CodeCoverageLineModel.cs" />
@@ -97,7 +97,7 @@
     <Compile Include="Core\RelayCommand.cs" />
     <Compile Include="ViewModels\CodeMetricsViewModel.cs" />
     <Compile Include="ViewModels\CodeCoverageViewModel.cs" />
-    <Compile Include="BusinessLogic\BackgroundColorConverter.cs" />
+    <Compile Include="Converters\BackgroundColorConverter.cs" />
     <Compile Include="ViewModels\ConfigurationViewModel.cs" />
     <Compile Include="Views\CodeCoverageView.xaml.cs">
       <DependentUpon>CodeCoverageView.xaml</DependentUpon>
